<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kouveepetshopcustomer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_produk"
        android:name="com.example.kouveepetshopcustomer.ui.produk.ProdukFragment"
        android:label="@string/title_produk"
        tools:layout="@layout/fragment_produk" />

    <fragment
        android:id="@+id/navigation_layanan"
        android:name="com.example.kouveepetshopcustomer.ui.layanan.LayananFragment"
        android:label="@string/title_layanan"
        tools:layout="@layout/fragment_layanan" />
</navigation>
