<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="Kouvee Pet Shop"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#FF6D00"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/baloo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/alamat"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#FF6D00"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/baloo"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <TextView
        android:id="@+id/no_telp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/nomor_text"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#FF6D00"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/baloo"
        app:layout_constraintTop_toBottomOf="@+id/alamat" />

    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/website"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#FF6D00"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/baloo"
        app:layout_constraintTop_toBottomOf="@+id/no_telp" />

</androidx.constraintlayout.widget.ConstraintLayout>